[gd_scene load_steps=21 format=3 uid="uid://c7p3wbac6idb4"]

[ext_resource type="Script" path="res://Arena.gd" id="1_dwiex"]
[ext_resource type="PackedScene" uid="uid://b3hw1ikaqtv6l" path="res://enemy_1.tscn" id="2_5dgjm"]
[ext_resource type="PackedScene" uid="uid://d1uqv8wssumwg" path="res://player.tscn" id="2_ax1f8"]
[ext_resource type="PackedScene" uid="uid://bq4lfbpcv35sw" path="res://enemy_2.tscn" id="3_b05s4"]
[ext_resource type="FontFile" uid="uid://beh0s3o4e8bn2" path="res://Font (1).ttf" id="3_xyqgc"]
[ext_resource type="Script" path="res://Score.gd" id="4_bdorj"]
[ext_resource type="PackedScene" uid="uid://cmdanr0t7ih1u" path="res://enemy_3.tscn" id="4_jvihm"]
[ext_resource type="Script" path="res://Highscore.gd" id="5_ew1np"]
[ext_resource type="PackedScene" uid="uid://burkbwdot6ak4" path="res://enemy_4.tscn" id="5_fa1eb"]
[ext_resource type="Script" path="res://Camera2D.gd" id="5_riky4"]
[ext_resource type="PackedScene" uid="uid://c1jkcye11cx08" path="res://power_up_wrap.tscn" id="8_5o750"]
[ext_resource type="Script" path="res://objectSpawner.gd" id="11_4ecc0"]
[ext_resource type="PackedScene" uid="uid://5p68lf6qabf3" path="res://power_up_reload.tscn" id="11_am8eh"]
[ext_resource type="PackedScene" uid="uid://ddjskc8y6bvxj" path="res://power_up_damage.tscn" id="12_sqghl"]
[ext_resource type="Script" path="res://sparkle.gd" id="12_vslwu"]
[ext_resource type="PackedScene" uid="uid://dei3empqdqm4v" path="res://sound_controller.tscn" id="13_l134k"]
[ext_resource type="Script" path="res://BloodScan.gd" id="16_oeknt"]
[ext_resource type="PackedScene" uid="uid://cn3d7kv8lwa7l" path="res://scoreboard.tscn" id="17_e16v7"]

[sub_resource type="Environment" id="Environment_seaom"]
background_mode = 3
glow_normalized = true
glow_strength = 0.64
glow_bloom = 0.15
glow_blend_mode = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6eb4j"]
size = Vector2(1280, 720)

[node name="Arena" type="Node2D"]
modulate = Color(0.996094, 0.996094, 0.996094, 1)
script = ExtResource("1_dwiex")

[node name="Player" parent="." instance=ExtResource("2_ax1f8")]
position = Vector2(640, 360)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_seaom")

[node name="UI" type="Node2D" parent="."]
z_index = 20

[node name="Control" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="Highscore" type="Label" parent="UI/Control"]
modulate = Color(0.2, 0.65098, 0.760784, 0.494118)
layout_mode = 1
offset_left = 117.0
offset_top = 673.0
offset_right = 2123.0
offset_bottom = 745.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("3_xyqgc")
theme_override_font_sizes/font_size = 64
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_ew1np")

[node name="Score" type="Label" parent="UI/Control"]
self_modulate = Color(0.2, 0.65098, 0.760784, 0.733333)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 582.0
offset_top = 17.0
offset_right = 745.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
tooltip_text = "THE AMOUNT OF PIXELS THAT ARE COLORED INSIDE THE ARENA"
mouse_filter = 1
mouse_default_cursor_shape = 16
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_xyqgc")
theme_override_font_sizes/font_size = 128
text = "1000"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_bdorj")

[node name="sparkle" type="CPUParticles2D" parent="UI/Control/Score"]
show_behind_parent = true
position = Vector2(117, 28)
emitting = false
amount = 20
one_shot = true
emission_shape = 3
emission_rect_extents = Vector2(150, 60)
gravity = Vector2(0, -100)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
orbit_velocity_min = -0.08
orbit_velocity_max = 0.08
damping_min = 16.875
damping_max = 50.625
angle_min = -180.0
angle_max = 297.0
scale_amount_max = 5.0
script = ExtResource("12_vslwu")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("5_riky4")

[node name="Screen_shake_time" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Sound_controller" parent="." instance=ExtResource("13_l134k")]

[node name="BloodScan" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 640.0
offset_top = 360.0
offset_right = 640.0
offset_bottom = 360.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("16_oeknt")

[node name="BloodScanTimer" type="Timer" parent="BloodScan"]
wait_time = 5.0
autostart = true

[node name="blood" type="Node" parent="."]

[node name="score_particles" type="Node" parent="."]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(720, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Scoreboard" parent="Control" instance=ExtResource("17_e16v7")]
layout_mode = 1

[node name="objectSpawner" type="Node2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("11_4ecc0")
enemies = Array[PackedScene]([ExtResource("2_5dgjm"), ExtResource("3_b05s4"), ExtResource("4_jvihm"), ExtResource("5_fa1eb")])
power_ups = Array[PackedScene]([ExtResource("12_sqghl"), ExtResource("11_am8eh"), ExtResource("8_5o750")])

[node name="Area2D" type="Area2D" parent="objectSpawner"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="objectSpawner/Area2D"]
shape = SubResource("RectangleShape2D_6eb4j")

[node name="Enemy_spawn_timer" type="Timer" parent="objectSpawner"]
autostart = true

[node name="Power_up_spawn_timer" type="Timer" parent="objectSpawner"]
wait_time = 8.0
autostart = true

[connection signal="timeout" from="Camera2D/Screen_shake_time" to="Camera2D" method="_on_screen_shake_time_timeout"]
[connection signal="timeout" from="BloodScan/BloodScanTimer" to="BloodScan" method="_on_blood_scan_timer_timeout"]
[connection signal="timeout" from="objectSpawner/Enemy_spawn_timer" to="objectSpawner" method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="objectSpawner/Power_up_spawn_timer" to="objectSpawner" method="_on_power_up_spawn_timer_timeout"]
